--- a/notebooks/02_Modeling_and_prediction.ipynb
+++ b/notebooks/02_Modeling_and_prediction.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "dad9fae0-590b-4727-8cad-21c74fe04034",
    "metadata": {},
    "outputs": [],
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "f4b8deda-de18-402d-a1ad-f415f524980c",
    "metadata": {},
    "outputs": [
@@ -190,7 +190,7 @@
     "best_params = xgb_results[best_accuracy]\n",
     "\n",
     "print(f'Best accuracy: {best_accuracy:.2f} with params: {best_params}')\n",
-    "with open('xgb_best_params.json','w') as file:\n",
+    "with open('../config/xgb_best_params.json','w') as file:\n",
     "    json.dump(best_params,file)\n",
     "    "
    ]
@@ -273,7 +273,7 @@
     "\n",
     "# print the accuracy and save the params for the best result\n",
     "print(f'Best accuracy: {best_accuracy:.2f} with params: {best_params}')\n",
-    "with open('svm_best_params.json','w') as file:\n",
+    "with open('../config/svm_best_params.json','w') as file:\n",
     "    json.dump(best_params,file)"
    ]
   },
@@ -351,7 +351,7 @@
     "\n",
     "# print the accuracy and save the params for the best result\n",
     "print(f'Best accuracy: {best_accuracy:.2f} with params: {best_params}')\n",
-    "with open('nn_best_params.json','w') as file:\n",
+    "with open('../config/nn_best_params.json','w') as file:\n",
     "    json.dump(best_params,file)"
    ]
   },
